--- a/web/src/app/components/schedule-page/schedule-page.component.scss
+++ b/web/src/app/components/schedule-page/schedule-page.component.scss
@@ -21,7 +21,7 @@
 app-time {
   width: 100%;
   height: 100%;
-  margin-right: 10%;
+  margin-right: 30px;
 }
 
 .schedule-scroll-list {
@@ -48,12 +48,15 @@ app-time {
   background-color: var(--footer-background-color);
 }
 
+mat-toolbar-row {
+  padding-right: 30px;
+}
+
 .footer-button {
   background-color: var(--button-background-color);
   color: var(--button-text-color);
   border: 1px solid var(--button-border-color);
   margin-left: 15px;
-  margin-right: 15px;
   font-size: 20px;
   font-style: bold;
   font-family: var(--button-font);
@@ -61,7 +64,33 @@ app-time {
   padding-bottom: 5px;
 }
 
+.button-icon {
+  padding-right: 10px;
+}
+
 .help-icon {
   padding-right: 10px;
   transform: scale(1.3);
+}
+
+//scrollbar
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px var(--schedule-event-background-color);
+  border-radius: 10px;
+  border: solid 5px rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--schedule-event-background-color);
+  border-radius: 10px;
+  border: solid 5px rgba(0, 0, 0, 0);
+  background-clip: padding-box;
 }
