--- a/web/src/app/components/time/time.component.scss
+++ b/web/src/app/components/time/time.component.scss
@@ -3,9 +3,13 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  margin-top: 10%;
+  padding: 0;
+  padding-top: 50px;
   background-color: transparent;
   font-family: var(--main-font);
+  margin-right: 0;
+  transition: none !important;
+  box-shadow: none !important;
 }
 
 .time-card-time {
@@ -13,10 +17,13 @@
   font-size: 94px;
   color: var(--time-card-color);
   margin: 0;
+  padding: 0;
+  line-height: 95%;
 }
 
 .time-card-date {
   text-align: right;
   font-size: 28px;
+  line-height: 150%;
   color: var(--time-card-color);
 }
